@@ -1,6 +1,9 @@
 Release 0.6.8 (in development)
 ==============================
 
+* #445: Fix links to result pages when using the search function
+  of HTML built with the ``dirhtml`` builder.
+
 * #444: In templates, properly re-escape values treated with the
   "striptags" Jinja filter.
 
